# clove

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/animation/: animation.h
include/characters/: character.h  warrior.h
include/core/: engine.h
include/graphics/: textureManager.h
include/input/: eventHandler.h
include/object/: gameObject.h  iObject.h
include/physics/: rigidBody.h  transform.h  vector2D.h
include/timer/: timer.h
src/: animation.cpp  engine.cpp  eventHandler.cpp  main.cpp  textureManager.cpp  timer.cpp  warrior.cpp
